fixing some import movie methods, adjusting movie call from frontend, adding more comments to services in backend